# HNU_NHS_Vision

./: .gitignore  CMakeLists.txt  README.md  armor__solver.cpp  armor__solver.hpp  detector.cpp  detector.hpp  extrinsics.cpp  extrinsics.hpp  planner.cpp  planner.hpp  predictor.cpp  predictor.hpp  preprocessor.cpp  preprocessor.hpp  solver.cpp  solver.hpp  tracker.cpp  tracker.hpp  traditional_detector.cpp  traditional_detector.hpp  types.hpp  yolo_detector.cpp  yolo_detector.hpp
standard_robot_pp_ros2/: CMakeLists.txt  CONTRIBUTING.md  README.md  README_edit.md  READNE.md  dependencies.repos  package.xml
standard_robot_pp_ros2/config/: standard_robot_pp_ros2.yaml
standard_robot_pp_ros2/include/standard_robot_pp_ros2/: crc8_crc16.hpp  gimbal_manager.hpp  packet_typedef.hpp  robot_info.hpp  standard_robot_pp_ros2.hpp
standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py  test_imu_launch.py
standard_robot_pp_ros2/script/: create_udev_rules.sh
standard_robot_pp_ros2/src/: crc8_crc16.cpp  gimbal_manager.cpp  standard_robot_pp_ros2.cpp
